<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <EditText
        android:id="@+id/editTextAnio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/año_matriculacion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextModelo" />

    <TextView
        android:id="@+id/textViewAnio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="40dp"
        android:text="@string/año"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLModelo" />

    <EditText
        android:id="@+id/editTextKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="17dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/kilometraje"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAnio" />

    <TextView
        android:id="@+id/textViewKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="43dp"
        android:text="@string/km"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAnio" />

    <EditText
        android:id="@+id/editTextPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewPrecio"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="41dp"
        android:text="@string/precio"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxVendido"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="46dp"
        android:text="@string/c.c."
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKm" />

    <EditText
        android:id="@+id/editTextCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/potencia"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCC" />

    <TextView
        android:id="@+id/textViewCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/c.v."
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCC" />

    <EditText
        android:id="@+id/editTextCC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/cilindrada"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKm" />

    <TextView
        android:id="@+id/textViewLMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/marca"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/spinnerOptions"
        android:layout_width="191dp"
        android:layout_height="58dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="22dp"
        android:entries="@array/marcas"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextModelo"
        app:layout_constraintEnd_toEndOf="@+id/editTextModelo"
        app:layout_constraintStart_toEndOf="@+id/textViewAnio"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:width="260sp"
        android:ems="10"
        android:hint="@string/modelo_coche"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewLModelo"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewLModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="112dp"
        android:text="@string/modelo"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxVendido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="132dp"
        android:text="@string/casilla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="147dp"
        android:layout_height="0dp"

        android:layout_marginTop="26dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/continuar"
        android:onClick="abrirInforme"
        android:text="@string/guardar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxVendido" />

</androidx.constraintlayout.widget.ConstraintLayout>

